--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -568,10 +568,6 @@ li:nth-child(12) {
   align-items: flex-start;
 }
 
-.hide {
-  display: none;
-}
-
 /* ADD TASK ICON */
 
 .add-task-icon {
@@ -672,6 +668,7 @@ svg {
 .task-input-container {
   display: flex;
   justify-content: center;
+  height: 20rem;
 }
 
 .confirm-btn {
@@ -682,4 +679,26 @@ svg {
   height: 4rem;
   border: 1px solid black;
   background: black;
+  top: 22.1rem;
+  left: 30.4rem;
+}
+
+.hide {
+  display: none;
+}
+
+.hide-input {
+  display: none;
+}
+
+.show-input {
+  display: flex;
+}
+
+.middle-z-index {
+  z-index: 400;
+}
+
+.task-items {
+  height: 50rem;
 }
