--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -7,6 +7,8 @@
 
 #root {
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 #container {
@@ -78,7 +80,7 @@ body {
 
 /* MONTH CIRCLE */
 
-li {
+.months-circle li {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -91,66 +93,66 @@ li {
   color: lightgray;
 }
 
-li:hover {
+.months-circle li:hover {
   color: white;
 }
 
-li:first-child {
+.months-circle li:first-child {
   -webkit-transform: rotate(0deg) skewY(-60deg);
   -ms-transform: rotate(0deg) skewY(-60deg);
   transform: rotate(0deg) skewY(-60deg);
 }
-li:nth-child(2) {
+.months-circle li:nth-child(2) {
   -webkit-transform: rotate(30deg) skewY(-60deg);
   -ms-transform: rotate(30deg) skewY(-60deg);
   transform: rotate(30deg) skewY(-60deg);
 }
-li:nth-child(3) {
+.months-circle li:nth-child(3) {
   -webkit-transform: rotate(60deg) skewY(-60deg);
   -ms-transform: rotate(60deg) skewY(-60deg);
   transform: rotate(60deg) skewY(-60deg);
 }
-li:nth-child(4) {
+.months-circle li:nth-child(4) {
   -webkit-transform: rotate(90deg) skewY(-60deg);
   -ms-transform: rotate(90deg) skewY(-60deg);
   transform: rotate(90deg) skewY(-60deg);
 }
-li:nth-child(5) {
+.months-circle li:nth-child(5) {
   -webkit-transform: rotate(120deg) skewY(-60deg);
   -ms-transform: rotate(120deg) skewY(-60deg);
   transform: rotate(120deg) skewY(-60deg);
 }
-li:nth-child(6) {
+.months-circle li:nth-child(6) {
   -webkit-transform: rotate(150deg) skewY(-60deg);
   -ms-transform: rotate(150deg) skewY(-60deg);
   transform: rotate(150deg) skewY(-60deg);
 }
-li:nth-child(7) {
+.months-circle li:nth-child(7) {
   -webkit-transform: rotate(180deg) skewY(-60deg);
   -ms-transform: rotate(180deg) skewY(-60deg);
   transform: rotate(180deg) skewY(-60deg);
 }
-li:nth-child(8) {
+.months-circle li:nth-child(8) {
   -webkit-transform: rotate(210deg) skewY(-60deg);
   -ms-transform: rotate(210deg) skewY(-60deg);
   transform: rotate(210deg) skewY(-60deg);
 }
-li:nth-child(9) {
+.months-circle li:nth-child(9) {
   -webkit-transform: rotate(240deg) skewY(-60deg);
   -ms-transform: rotate(240deg) skewY(-60deg);
   transform: rotate(240deg) skewY(-60deg);
 }
-li:nth-child(10) {
+.months-circle li:nth-child(10) {
   -webkit-transform: rotate(270deg) skewY(-60deg);
   -ms-transform: rotate(270deg) skewY(-60deg);
   transform: rotate(270deg) skewY(-60deg);
 }
-li:nth-child(11) {
+.months-circle li:nth-child(11) {
   -webkit-transform: rotate(300deg) skewY(-60deg);
   -ms-transform: rotate(300deg) skewY(-60deg);
   transform: rotate(300deg) skewY(-60deg);
 }
-li:nth-child(12) {
+.months-circle li:nth-child(12) {
   -webkit-transform: rotate(330deg) skewY(-60deg);
   -ms-transform: rotate(330deg) skewY(-60deg);
   transform: rotate(330deg) skewY(-60deg);
@@ -171,6 +173,7 @@ li:nth-child(12) {
   list-style: none;
   overflow: hidden;
   background: rgba(0, 0, 0, 1);
+  background-color: #333;
   transform: rotate(210deg);
 }
 
@@ -657,18 +660,20 @@ svg {
   outline: none;
   background: none;
   color: lightgray;
+  text-align: center;
 }
 
 [placeholder]:focus::-webkit-input-placeholder {
   transition: text-indent 0.8s 0.8s ease;
-  text-indent: -120%;
+  text-indent: -145%;
   opacity: 1;
 }
 
 .task-input-container {
   display: flex;
   justify-content: center;
-  height: 20rem;
+  height: 20vh;
+  align-items: center;
 }
 
 .confirm-btn {
@@ -677,10 +682,10 @@ svg {
   border-radius: 50%;
   width: 4rem;
   height: 4rem;
-  border: 1px solid black;
-  background: black;
+  /* border: 1px solid black; */
   top: 22.1rem;
-  left: 30.4rem;
+  left: 42.8rem;
+  border: 1px solid white;
 }
 
 .hide {
@@ -701,4 +706,131 @@ svg {
 
 .task-items {
   height: 50rem;
+}
+
+ul.triangle {
+  margin: auto;
+  padding: 0;
+  display: block;
+  text-align: center;
+}
+
+ul.triangle li {
+  border-radius: 50%;
+  background-color: black;
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+}
+
+section.triangle {
+  height: 30rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+}
+
+.t > div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 222px;
+  height: 192px;
+  overflow: hidden;
+
+  transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+
+  -ms-transform: skewX(30deg);
+  -webkit-transform: skewX(30deg);
+  transform: skewX(30deg);
+}
+.t div .triangle {
+  position: absolute;
+  top: 86px;
+  left: -101px;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 100px 173.2px 100px;
+  border-color: transparent transparent #0079c5 transparent;
+  -webkit-backface-visibility: hidden;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  cursor: pointer;
+
+  transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+
+  -ms-transform: skewX(-30deg) rotate(-60deg);
+  -webkit-transform: skewX(-30deg) rotate(-60deg);
+  transform: skewX(-30deg) rotate(-60deg);
+}
+.t div .triangle:hover {
+  border-color: transparent transparent #009cff transparent;
+
+  transform: skewX(-30deg) rotate(-60deg) translate(0, 20%);
+  -webkit-transform: skewX(-30deg) rotate(-60deg) translate(0, 20%);
+  -moz-transform: skewX(-30deg) rotate(-60deg) translate(0, 20%);
+}
+
+.t > div:nth-child(1) {
+  -ms-transform: skewX(30deg);
+  -webkit-transform: skewX(30deg);
+  transform: skewX(30deg);
+}
+.t > div:nth-child(2) {
+  -ms-transform: rotate(60deg) skewX(30deg);
+  -webkit-transform: rotate(60deg) skewX(30deg);
+  transform: rotate(60deg) skewX(30deg);
+}
+.t > div:nth-child(3) {
+  -ms-transform: rotate(120deg) skewX(30deg);
+  -webkit-transform: rotate(120deg) skewX(30deg);
+  transform: rotate(120deg) skewX(30deg);
+}
+.t > div:nth-child(4) {
+  -ms-transform: rotate(-60deg) skewX(30deg);
+  -webkit-transform: rotate(-60deg) skewX(30deg);
+  transform: rotate(-60deg) skewX(30deg);
+}
+.t > div:nth-child(5) {
+  -ms-transform: rotate(-120deg) skewX(30deg);
+  -webkit-transform: rotate(-120deg) skewX(30deg);
+  transform: rotate(-120deg) skewX(30deg);
+}
+.t > div:nth-child(6) {
+  -ms-transform: rotate(-180deg) skewX(30deg);
+  -webkit-transform: rotate(-180deg) skewX(30deg);
+  transform: rotate(-180deg) skewX(30deg);
+}
+
+.t {
+  position: absolute;
+  position: relative;
+  top: 20rem;
+}
+
+.hex-middle {
+  width: 16rem;
+  height: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -4rem;
+  right: -8rem;
+}
+
+.r {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row {
+  height: 7rem;
 }
