--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -236,9 +236,11 @@ body {
 }
 
 .center-image {
-  width: 13rem;
-  height: 13rem;
-  color: white;
+  width: 5rem;
+  height: 5rem;
+  background-color: #cccccc;
+  border-radius: 50%;
+  /* border-radius: 25%; */
 }
 
 /* HOURS CIRCLE */
@@ -656,7 +658,7 @@ svg {
 .inp {
   border: none;
   border-bottom: 1px solid white;
-  padding: 20px 43px;
+  padding: 23px 84px;
   outline: none;
   background: none;
   color: lightgray;
@@ -669,6 +671,9 @@ svg {
   opacity: 1;
 }
 
+.task-input {
+  position: relative;
+}
 .task-input-container {
   display: flex;
   justify-content: center;
@@ -680,12 +685,13 @@ svg {
   position: absolute;
   /* z-index: 400; */
   border-radius: 50%;
-  width: 4rem;
-  height: 4rem;
+  width: 6.5rem;
+  height: 6.5rem;
   /* border: 1px solid black; */
-  top: 22.1rem;
-  left: 42.8rem;
+  top: -31rem;
+  left: 7.5rem;
   border: 1px solid white;
+  background: #4d4d4d;
 }
 
 .hide {
@@ -832,5 +838,19 @@ section.triangle {
 }
 
 .row {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
   height: 7rem;
+  min-width: 400px;
+}
+
+.row:nth-child(3),
+.row:nth-child(4) {
+  justify-content: flex-start;
+}
+
+.row:nth-child(4) {
+  min-width: 533px;
 }
