--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -834,13 +834,13 @@ section.triangle {
   right: -8rem;
 }
 
-.r {
+.tasks-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.row {
+.task-row {
   display: flex;
   align-content: center;
   align-items: center;
@@ -849,16 +849,130 @@ section.triangle {
   min-width: 400px;
 }
 
-.row:nth-child(2),
-.row:nth-child(3),
-.row:nth-child(4) {
+.task-row:nth-child(2),
+.task-row:nth-child(3),
+.task-row:nth-child(4) {
   justify-content: flex-start;
 }
 
-.row:nth-child(4) {
+.task-row:nth-child(4) {
   min-width: 533px;
 }
 
-.row:nth-child(2) {
+.task-row:nth-child(2) {
   min-width: 265px;
+}
+
+.slots-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 5px;
+  width: 100vw;
+  height: 100vh;
+}
+
+.slot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slot:nth-child(1) {
+  grid-area: 1 / 5 / 2 / 9;
+  /* background-color: rgba(163, 34, 173, 0.5); */
+}
+
+.slot:nth-child(2) {
+  grid-area: 2 / 3 / 3 / 7;
+  /* background-color: rgba(30, 203, 81, 0.5); */
+}
+
+.slot:nth-child(3) {
+  grid-area: 2 / 7 / 3 / 11;
+
+  /* background-color: rgba(58, 215, 181, 0.5); */
+}
+
+.slot:nth-child(4) {
+  grid-area: 3 / 1 / 4 / 5;
+  /* background-color: rgba(178, 166, 72, 0.5); */
+}
+
+.slot:nth-child(5) {
+  grid-area: 3 / 5 / 4 / 9;
+  /* background-color: rgba(103, 177, 182, 0.5); */
+}
+
+.slot:nth-child(6) {
+  grid-area: 3 / 9 / 4 / 13;
+  /* background-color: rgba(122, 201, 176, 0.5); */
+}
+
+.circle-f {
+  display: inline-block;
+  height: 8rem;
+  width: 8rem;
+
+  background-color: red;
+  border-radius: 50%;
+}
+
+.box {
+  width: 36rem;
+  height: 36rem;
+
+  border: 1px solid;
+}
+.box:before,
+.box > div:before {
+  content: "";
+  float: var(--d, left);
+  height: 100%;
+  width: 50%;
+  shape-outside: linear-gradient(
+    to top var(--d, left),
+    transparent 50%,
+    #fff 0
+  );
+  /* To illustrate */
+  /* background: linear-gradient(to top left, transparent 50%, yellow 0); */
+}
+.box > div {
+  height: 100%;
+}
+.box > div:before {
+  --d: right;
+  /* To illustrate */
+  /* background: linear-gradient(to top right, transparent 50%, grey 0); */
+}
+.task-item {
+  height: 100px;
+}
+
+.tasks-c {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 600px;
+}
+.task-item-1 {
+  margin-left: 200px;
+  margin-right: 200px;
+}
+.task-item-2 {
+  margin-left: 150px;
+}
+.task-item-3 {
+  margin-right: 150px;
+}
+.task-item-4 {
+  margin-left: 100px;
+}
+.task-item-6 {
+  margin-right: 100px;
+}
+
+.item {
+  height: 100px;
 }
