--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -277,7 +277,7 @@ body {
 .astro-circle {
   position: absolute;
   transform: translate(-50%, -50%);
-  transform: translate(-50%, -65%);
+  transform: translate(-50%, -67%);
   border-radius: 50%;
   border: 1px solid white;
   width: 650px;
@@ -478,7 +478,8 @@ body {
   border: 1px solid white;
   width: 650px;
   height: 650px;
-  top: 50%;
+  top: 39.7%;
+
   left: 50%;
   overflow: hidden;
 }
@@ -720,6 +721,8 @@ svg {
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: crosshair;
+  height: 30rem;
 }
 
 .task-row {
@@ -776,4 +779,84 @@ svg {
 
 .item {
   height: 100px;
+}
+
+.hide-tasks {
+  display: none;
+}
+
+/* LIST VIEW TASKS */
+
+.task-list-container {
+  height: 30rem;
+  /* border: 1px solid white; */
+  overflow: hidden;
+  margin: 0;
+  margin-bottom: 40rem;
+}
+
+#container1 {
+  height: 30rem;
+  width: 30rem;
+  /* border: 1px solid green; */
+  overflow: hidden;
+  margin: 0;
+}
+
+#container2 {
+  width: 34rem;
+  height: 30rem;
+  /* border: 1px solid blue; */
+  overflow: auto;
+  /* padding-right: 2rem; */
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+}
+
+ul.tasks-scroll {
+  font-size: 1rem;
+  line-height: 6rem;
+}
+
+ul > *:last-child {
+  padding-bottom: 7rem;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  background-image: radial-gradient(rgba(0, 0, 0, 0) 1px, #242424 1px);
+  /* background-color: #242424; */
+  opacity: 0.7;
+  background-size: 4px 4px;
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(4px);
+  font-size: 14px;
+  line-height: 14px;
+  width: 14rem;
+  margin: 0 auto;
+  height: 7rem;
+  bottom: -30rem;
+  border: none;
+}
+
+footer::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: black;
+  opacity: 0.2;
 }
