--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -68,7 +68,7 @@ body {
 /* CLOCK  */
 
 .calendar-clock {
-  height: 80vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -277,7 +277,7 @@ body {
 .astro-circle {
   position: absolute;
   transform: translate(-50%, -50%);
-  transform: translate(-50%, -67%);
+  /* transform: translate(-50%, -67%); */
   border-radius: 50%;
   border: 1px solid white;
   width: 650px;
@@ -544,6 +544,7 @@ body {
   display: flex;
   justify-content: center;
   border-radius: 50%;
+  overflow: hidden;
 }
 
 .hours-circle .circle {
@@ -657,6 +658,10 @@ svg {
   background-color: red;
 }
 
+.symbol-btn:focus {
+  color: red;
+}
+
 /* TASKS CONTAINER */
 
 .task-input {
@@ -667,6 +672,9 @@ svg {
   background: none;
   color: lightgray;
   text-align: center;
+  position: absolute;
+  top: 88%;
+  left: 40.4rem;
 }
 
 [placeholder]:focus::-webkit-input-placeholder {
@@ -675,9 +683,11 @@ svg {
   opacity: 1;
 }
 
-.task-form {
-  position: relative;
-}
+/* .task-form {
+  position: absolute;
+  top: 92%;
+} */
+
 .task-input-container {
   display: flex;
   justify-content: center;
@@ -686,14 +696,13 @@ svg {
 }
 
 .confirm-btn {
-  position: absolute;
-  /* z-index: 400; */
   border-radius: 50%;
-  width: 5.5rem;
-  height: 5.5rem;
+  width: 4rem;
+  height: 4rem;
   /* border: 1px solid black; */
-  top: -31rem;
-  left: 8rem;
+  position: absolute;
+  top: 47%;
+  left: 48%;
   border: 1px solid white;
   background: #4d4d4d;
 }
