--- a/client/client/src/index.css
+++ b/client/client/src/index.css
@@ -674,7 +674,7 @@ svg {
   text-align: center;
   position: absolute;
   top: 88%;
-  left: 40.4rem;
+  left: 39.9%;
 }
 
 [placeholder]:focus::-webkit-input-placeholder {
@@ -702,7 +702,7 @@ svg {
   /* border: 1px solid black; */
   position: absolute;
   top: 47%;
-  left: 48%;
+  left: 47.6%;
   border: 1px solid white;
   background: #4d4d4d;
 }
@@ -805,19 +805,19 @@ svg {
 }
 
 #container1 {
-  height: 30rem;
-  width: 30rem;
+  height: 34rem;
+  width: 34rem;
   /* border: 1px solid green; */
   overflow: hidden;
   margin: 0;
 }
 
 #container2 {
-  width: 34rem;
-  height: 30rem;
+  height: 34rem;
+  width: 35rem;
   /* border: 1px solid blue; */
   overflow: auto;
-  /* padding-right: 2rem; */
+  padding-right: 1rem;
   margin: 0;
   display: flex;
   flex-direction: row;
@@ -828,6 +828,23 @@ svg {
 ul.tasks-scroll {
   font-size: 1rem;
   line-height: 6rem;
+  /* display: flex; */
+}
+
+.tasks-inner {
+  display: flex;
+  align-items: center;
+  width: 26rem;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.tasks-inner svg {
+  transform: none;
+}
+
+.tasks-inner svg:hover {
+  color: white;
 }
 
 ul > *:last-child {
@@ -851,7 +868,7 @@ footer {
   backdrop-filter: blur(4px);
   font-size: 14px;
   line-height: 14px;
-  width: 14rem;
+  width: 30rem;
   margin: 0 auto;
   height: 7rem;
   bottom: -30rem;
